# MathModelAgent

./: .gitignore  README.md  README_EN.md  cli.py  docker-compose.prod.yml  example.py  main.py  pyproject.toml  terminal.py  webui.py
backend/: .env.dev  .env.dev.example  .gitignore  Dockerfile  README.md  auth.py  database.db  database.sql  dependency.py  main.py  models.py  pyproject.toml
backend/app/: example.py  main.py  mathmodelagent.py
backend/app/config/: config.py  setting.py
backend/app/core/: Agents.py  LLM.py  WorkFlow.py  agents.py  flows.py  functions.py  llm.py  prompts.py  workflow.py
backend/app/core/agents/: agent.py  coder_agent.py  coordinator_agent.py  modeler_agent.py  writer_agent.py
backend/app/core/llm/: llm.py
backend/app/models/: model.py  task.py  user_input.py  user_output.py
backend/app/routers/: files_router.py  modeling.py  modeling_router.py  ws.py  ws_router.py
backend/app/schemas/: request.py  response.py
backend/app/services/: checkpoint_control.py  task_control.py  task_registry.py  ws_manager.py
backend/app/tests/: test_e2b.py
backend/app/tools/: code_interpreter.py  e2b_interpreter.py  jupyter_backend.py  local_interpreter.py  notebook_serializer.py
backend/app/utils/: RichPrinter.py  common_utils.py  connection.py  data_recorder.py  enums.py  logger.py  notebook_serializer.py  redis_client.py  redis_manager.py
backend/projects/20250307-104551-95bffcd3/jupyter/: notebook.ipynb
backend/projects/20250307-104551-95bffcd3/log/: chat_completion.json  chat_history.json  token_usage.json
backend/websocket-redis-manager/: README.md  requirements.txt
backend/websocket-redis-manager/src/: main.py
backend/websocket-redis-manager/src/config/: __init__.py  settings.py
backend/websocket-redis-manager/src/core/: __init__.py  ws_manager.py
backend/websocket-redis-manager/src/handlers/: __init__.py  redis_handler.py  ws_handler.py
backend/websocket-redis-manager/src/models/: __init__.py  message.py
backend/websocket-redis-manager/src/utils/: __init__.py  logger.py
backend/websocket-redis-manager/tests/: test_ws_manager.py
config/: config.py  config.toml.example
core/: Agents.py  LLM.py  WorkFlow.py  agents.py  functions.py  prompt.py  workflow.py
frontend/: .env.development  .eslintignore  .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/apis/: commonApi.ts  submitModelingApi.ts
frontend/src/components/: AppSidebar.vue  Bubble.vue  ChatArea.vue  CheckpointMessage.vue  CoderEditor.vue  Editor.vue  (+5 more)
models/: task.py  user_input.py  user_output.py
tests/: test_data_recorder.py  test_dirs.py  test_gradio.py  test_jupyter.py  test_rich_printer.py
tools/: code_interpreter.py  jupyter_backend.py
utils/: RichPrinter.py  cli.py  common_utils.py  data_recorder.py  enums.py  io.py  notebook_serializer.py
(+11 files in other folders)
