[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.1",
    "uvicorn[standard]>=0.34.0",
    "websocket>=0.2.1",
]
